[package]
name = "bevy_coroutine"
version = "0.1.3"
edition = "2021"
license = "MIT"
description = "A simple library to run coroutines in Bevy"
repository = "https://github.com/Maaxed/bevy_coroutine/"
keywords = ["game", "gamedev", "bevy", "coroutine", "async"]
categories = ["game-development", "asynchronous"]
authors = ["Maaxed"]


# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = { version = "0.14.2", default-features = false, features = [] }

[dev-dependencies]
bevy = { version = "0.14.2", default-features = true, features = ["dynamic_linking"] }
